updating to correct images

--- a/analysis.html
+++ b/analysis.html
@@ -60,7 +60,7 @@
                                 
                             <a href="temp.html"><figure class="comparison_figure" style="margin:20px;margin-left: 20%">
                                 <figcaption style="text-align: center;font-size: 150%">Latitude vs. Max Temperature</figcaption>
-                                <img src="../Resources/assets/images/temp.png" alt="latitude_Max-Temperature" >
+                                <img src="Resources/assets/images/temp.png" alt="latitude_Max-Temperature" >
                             </figure></a>    
                     </div>
 
@@ -68,7 +68,7 @@
                      <div class="col-sm-6 col-md-6">
                            <a href="Temperature.html"><figure class="comparison_figure" style="margin:20px;margin-left: 20%">
                             <figcaption style="text-align: center;font-size: 150%">Latitude vs. Cloudiness</figcaption>
-                           <img src="../Resources/assets/images/cloudy.png" alt="latitude_Cloudiness" >
+                           <img src="Resources/assets/images/cloudy.png" alt="latitude_Cloudiness" >
                                   </figure></a>
                     </div>
             </div>
@@ -76,13 +76,13 @@
                     <div class="col-sm-6 col-md-6">
                            <a href="temp.html"><figure class="comparison_figure" style="margin-bottom:30%;margin-left: 20%">
                             <figcaption style="text-align: center;font-size: 150%">Latitude vs. Humidity</figcaption>
-                           <img src="../Resources/assets/images/humid.png" alt="latitude_humidity" >
+                           <img src="Resources/assets/images/humid.png" alt="latitude_humidity" >
                                 </figure></a>
                     </div>
                     <div class="col-sm-6 col-md-6">
                             <a href="temp.html"><figure class="comparison_figure" style="margin-bottom:30%;margin-left: 20%;">
                               <figcaption style="text-align: center;font-size: 150%">Latitude vs. Wind Speed</figcaption>
-                                <img src="../Resources/assets/images/windy.png" alt="latitude_wind-speed" >
+                                <img src="Resources/assets/images/windy.png" alt="latitude_wind-speed" >
                              </figure></a>
                     </div>
             </div>
